--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -14,7 +14,7 @@
   tags: ['php']
 
 - name: install ius repo package
-  yum: name=https://centos{{ ansible_distribution_major_version }}.iuscommunity.org/ius-release.rpm state=present lock_timeout=180
+  yum: name=https://repo.ius.io/ius-release-el{{ ansible_distribution_major_version }}.rpm state=present lock_timeout=180
   tags: ['php']
 
 - name: install ius rpm gpg key
@@ -63,9 +63,9 @@
 - name: ensure that custom php-fpm logrotate file is placed
   template:
     src: etc.logrotate.d.php-fpm.j2
-    dest: /etc/logrotate.d/php-fpm 
+    dest: /etc/logrotate.d/php-fpm
     owner: root
     group: root
     mode: 0644
   when: php_use_fpm == true
-  tags: ['php', 'logrotate'] 
+  tags: ['php', 'logrotate']
