--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -15,10 +15,17 @@
 
 - name: install ius repo package
   yum: name=https://repo.ius.io/ius-release-el{{ ansible_distribution_major_version }}.rpm state=present lock_timeout=180
+  when: ansible_distribution != "Amazon"
   tags: ['php']
 
 - name: install ius rpm gpg key
   rpm_key: state=present key=/etc/pki/rpm-gpg/RPM-GPG-KEY-IUS-{{ ansible_distribution_major_version }}
+  when: ansible_distribution != "Amazon"
+  tags: ['php']
+
+- name: enable amazon linux extras php repo
+  command: "amazon-linux-extras enable php{{ php_version }}"
+  when: ansible_distribution == "Amazon"
   tags: ['php']
 
 - name: install php packages
